--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <link rel="icon" type="image/x-icon" href="https://static.vecteezy.com/system/resources/previews/002/180/679/original/horse-logo-template-icon-free-vector.jpg">
   </head>
 <body>
-  <img scr="https://static.vecteezy.com/system/resources/previews/002/180/679/original/horse-logo-template-icon-free-vector.jpg" alt="YOU JUST GOT COOKED">
+  <img src="https://static.vecteezy.com/system/resources/previews/002/180/679/original/horse-logo-template-icon-free-vector.jpg" alt="YOU JUST GOT COOKED">
   </body>
 </html>
