--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <link rel="icon" type="image/x-icon" href="https://www.ferrari.com/static/favicon.ico">
   </head>
 <body>
-  <img src="https://static.vecteezy.com/system/resources/previews/002/180/679/original/horse-logo-template-icon-free-vector.jpg" alt="YOU JUST GOT COOKED" width="1000" height="1000">
+  <a href="https://www.youtube.com/watch?v=HvTgQznfew8"><img src="https://static.vecteezy.com/system/resources/previews/002/180/679/original/horse-logo-template-icon-free-vector.jpg" alt="YOU JUST GOT COOKED" width="1000" height="1000"></a>
   </body>
 </html>
