--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <link rel="icon" type="image/x-icon" href="https://www.ferrari.com/static/favicon.ico">
   </head>
 <body>
-  <a href="https://www.youtube.com/watch?v=HvTgQznfew8"><img src="https://static.vecteezy.com/system/resources/previews/002/180/679/original/horse-logo-template-icon-free-vector.jpg" alt="YOU JUST GOT COOKED" width="500" height="500"></a>
+  <a href="https://www.youtube.com/watch?v=HvTgQznfew8"><img src="https://ichef.bbci.co.uk/news/976/cpsprodpb/B875/production/_102512274_gettyimages-518360318.jpg" alt="YOU JUST GOT COOKED" width="500" height="500"></a>
   </body>
 </html>
