--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>KABUSSY</title>
+    <title>D'angler Fish</title>
     <link rel="icon" type="image/x-icon" href="https://www.ferrari.com/static/favicon.ico">
   </head>
 <body>
